# Client

./: CMakeLists.txt  ClientApp.cpp  ClientApp.h  ClientCLI.cpp  ClientCLI.hpp  CraftJSONParser.cpp  CraftJSONParser.hpp  LICENSE  MemoryProjectRepository.cpp  MemoryProjectRepository.hpp  Project.cpp  Project.hpp  ProjectRepository.cpp  ProjectRepository.hpp  ProjectResolver.cpp  ProjectResolver.hpp  ProjectVersion.cpp  ProjectVersion.hpp  README.md  ResolvedProject.hpp  cli.cpp
test/: testresolver.cpp
